--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,10 @@
     "test",
     "tests"
   ],
+
   "dependencies": {
     "angular": "~1.2.20",
-    "ui-bootstrap-tpls": "~0.10.0",
+    "angular-bootstrap": "~0.10.0",
     "toastr": "~2.0.1",
     "jquery": "~1.10.0"
   }
