--- a/bower.json
+++ b/bower.json
@@ -26,8 +26,11 @@
 
   "dependencies": {
     "angular": "~1.2.20",
+    "angular-animate": "~1.2.20",
     "angular-bootstrap": "~0.10.0",
     "toastr": "~2.0.1",
-    "jquery": "~1.10.0"
+    "jquery": "~1.10.0",
+    "bootstrap.css": "~3.1.1",
+    "animate.css": "~3.2.0"
   }
 }
