--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
     "angular-bootstrap": "~0.10.0",
     "toastr": "~2.0.1",
     "jquery": "~1.10.0",
-    "bootstrap.css": "~3.2.0",
+    "bootstrap": "~3.2.0",
     "animate.css": "~3.2.0"
   }
 }
